@@ -1,5 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX termcolor-1.2.1-fix-spec.patch 678 SHA256 7b85a365f1b0b53bf22b06e43e0a9075898c24c685f6a2aa510ca877c8a2eacf SHA512 380d31a11980514eb69d28bdf02b63ba92b656e781b0edbd8cd0e53d48989e016f0ac21269108414f3e27563332ac79781245fe282aedc8a9742800ea6d2a587 WHIRLPOOL 657d114192ee5735c003e0665520ffd3bce3697744ea83b7bd5e4985ec32145443af7aff722626e3826f7585373bd545f7789611e40fde12ce59f73f5a2a9351
 DIST termcolor-1.2.1.gem 6656 SHA256 d5e595a8d29380d76b44e5e3806766198da048095acc51072b388ea5439e1df3 SHA512 986fe5a5a56a83d9a39ce13cfe59a82850780befdbba006d2d0cf532b9bf2f72f1fe70363123c46b8beead5d8add452535189a069f2b2f3cf62f0b7611ec52ff WHIRLPOOL 3d12c46f22b53ec2df15d55673ebe78ad98248deabdb5adc655908774edf30f3ac90f5210bd994dd4997c8017a9e2e11d5a705ab3679ff689c9d3b9df702b865
+DIST termcolor-1.2.2.gem 7168 SHA256 9c07f618211d20b43fe2d06ca5815d8c5c13f20b2ed87b67e815ad39869cb5f4 SHA512 1709c6ce299a320209288cc27fb1e8f80492e582b84be2e54f3a09b96c1d2e048760b8f72e19581bd8bc6c1539c34ac010cb3e7bec4a7c24909eff438639182e WHIRLPOOL 66a0ee0b282898e08bbf557d815177afd4fc6d784da18b66d9a843e2d154def90e09f6135455a1eab7423c9ab3c9cbc752c7e259a10029b3c836bef013f6d433
 EBUILD termcolor-1.2.1-r1.ebuild 746 SHA256 eab885ce3ed75910d7f97f54e1ac3c0b4da54441086afaf5be3ae319145774a2 SHA512 715f03ae7a0c45bb9f118eda3a369cc9d598288fd98fc504dc38bed3e71188ba55219125f93886e7147cf296f3898dff1224374010e29d632c6913a69451c3a2 WHIRLPOOL 6a217790940758a7f3fec55726cda3eb50fa3ab67c7e7e0f0748963650d899d2dba4883dbb8e75a0c9ce568bbb75d4e8f386d16c27f76b5973ceaa1417068de9
-MISC ChangeLog 1379 SHA256 b8d3b75b68c423f5c27ff31b861fbe250a3e3102380ac257ca5fc11f50355a23 SHA512 7be39f2b2bdfeee1134e9eb6b5969508b93d314f72d32e38e3c10cdb7abadbfeace809dcbbec391fdd9f6e1bdc8aaa1c0789dc29170334eba819e897628ab1c7 WHIRLPOOL d001008736d9271c3120cfa96545210fcd4c8c6a07e3c85bc34d0168812e75836c5385edd93d4d32dc44de92a9dba0806c1c932aea7d68b3408346197f5602cb
+EBUILD termcolor-1.2.2.ebuild 713 SHA256 ba6cec7f44147684fcf3caa5aac691ffc4d05ba8c0967d2daa3ec8767878135a SHA512 51e025dfd5b7ecf8d05f8672bb082259ffc540dec6e5b26e8239cac85926019bf1f1febbc72b39d514b3a921d8a272898ce307f4685d7d2edf9e92d21633c8d3 WHIRLPOOL a6a29b75a403c65e21db9b021292551f2fefc5de8c4935905befa61a6703cff6d3741e63271a57d2bba73b8779664e60e5f72179484e7f350cf48db1114d0d71
+MISC ChangeLog 1504 SHA256 d2fbaf0541d703acc92c70c1729bd2f1f580d06c2548756c0e4f952de8dfa611 SHA512 4a51c7e7177300b65a0a757d53d69786965179f8e515e3549fecaa3805a00c292e28da40614514451425f189df57cd9d900aa3ed28a79578548b14b1b79902e2 WHIRLPOOL fd81fac822d4420d333272b40d4ad7536a79445595a50fa3d137ce5766eb17cf046d13639f662f73f7e10ebfc3387e9a33bca4e163195ede091b5f5f8ba41788
 MISC metadata.xml 220 SHA256 3876bf94339a6b2a36040fdf7eaeb1dcddff46924c02b8135f615c2d4eb1c743 SHA512 66dbb451ba4115e830d33afa73976cbaeba61ea7fece70a40d282ea075a1543bd40e1a6b1b93eb2a4a46f34f0737227c80d7e5011380fb2568a994638ac56776 WHIRLPOOL 0c2761a8fefbec57d963f3c47332454125585f59d2797608a14e9c3961e311de5e02076ff66382972ca6737923d541a7da767a20010822e29340b663b5bf5464
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlNl5GYACgkQiIP6VqMIqNdrBwD/Ra+D67IcCkxgb+xAgKpwqd8b
+OyGrFO8qEABBUOKb7gsA/RSLsZMrUhaxA28jYX1nxsoM8TcIj8sRKOrT/v2TQx9z
+=ih/4
+-----END PGP SIGNATURE-----
