@@ -1,0 +1,25 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/termcolor/termcolor-1.2.2.ebuild,v 1.1 2014/05/04 06:55:26 graaff Exp $
+
+EAPI=5
+
+#*** Using highline effectively in JRuby requires manually installing the ffi-ncurses gem.
+USE_RUBY="ruby19 ruby20 ruby21"
+
+RUBY_FAKEGEM_RECIPE_TEST="rspec"
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_EXTRADOC="History.txt README.rdoc"
+
+inherit ruby-fakegem
+
+DESCRIPTION="a library for ANSI color formatting like HTML for output in terminal"
+HOMEPAGE="http://termcolor.rubyforge.org/"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+ruby_add_rdepend ">=dev-ruby/highline-1.5.0"
